<resources>

    <string name="app_name">Mp3Player</string>
    <string name="menu_settings">Settings</string>
    <string name="update">更新列表</string>
    <string name="about">关于</string>
    <string name="server_ip">17.0.2.180</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="last">last</string>
    <string name="next">next</string>
</resources>