<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">
    <TextView 
        android:id="@+id/musicText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:textColor="#00aa00"
        android:textSize="16dp"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal|center">

    <ImageButton 
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pause"
        android:contentDescription="@string/pause"/>
    <View 
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
    <ImageButton 
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/begin"
        android:contentDescription="@string/start"/>
    <View 
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
    <ImageButton 
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stop"
        android:contentDescription="@string/stop"/>
  </LinearLayout>
  <LinearLayout 
      android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom">
     <ImageButton 
        android:id="@+id/last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/last"
        android:contentDescription="@string/last"/>
     <View 
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>
        
     <ImageButton 
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/next"
        android:contentDescription="@string/next"/>
  </LinearLayout>
</LinearLayout>